rename page.css 3

--- a/calendar.html
+++ b/calendar.html
@@ -603,14 +603,14 @@
                                 role="radio"
                                 aria-checked="true"
                                 type="button"
-                                class="_1fmtfgn1"
+                                class="main-content__categories-btn-month"
                               >
-                                <div class="_1fnsl63h">Month</div></button
+                                <div class="main-content__btn-month-text">Month</div></button
                               ><button
                                 role="radio"
                                 aria-checked="false"
                                 type="button"
-                                class="_1oahr65z"
+                                class="main-content__categories-btn-agenda"
                                 onclick="window.location.href='calendar_agenda.html';"
                               >
                                 <div class="main-content__header-date-categories-text">Agenda</div>
