--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -616,7 +616,7 @@
                                 type="button"
                                 class="main-content__header-date-categories-btn-tertiary"
                               >
-                                <div class="_1fnsl63h">Agenda</div>
+                                <div class="main-content__btn-month-text">Agenda</div>
                               </button></span
                             ></span
                           >
