--- a/calendar_week.html
+++ b/calendar_week.html
@@ -598,7 +598,7 @@
                                 type="button"
                                 class="main-content__date-categories-btn"
                               >
-                                <div class="_1fnsl63h">Week</div></button
+                                <div class="main-content__btn-month-text">Week</div></button
                               ><button
                                 role="radio"
                                 aria-checked="false"
@@ -611,7 +611,7 @@
                                 role="radio"
                                 aria-checked="false"
                                 type="button"
-                                class="_1oahr65z"
+                                class="main-content__categories-btn-agenda"
                                 onclick="window.location.href='calendar_agenda.html';"
                               >
                                 <div class="main-content__header-date-categories-text">Agenda</div>
