--- a/dashboard.html
+++ b/dashboard.html
@@ -170,12 +170,12 @@
               </header>
             </div>
             <main id="site-content" class="main_content">
-              <div class="_14zmyw6">
-                <div class="_10qs2gf">
-                  <div class="_1p4o530w">
-                    <div class="_3d9x11">
+              <div class="task-container">
+                <div class="task-container__wrapper">
+                  <div class="task-container__list-wrapepr">
+                    <div class="task-container__task-list-content">
                       <div class="main-content__details-button-wrapper">
-                        <div class="_i3y2yi" role="heading" aria-level="2">
+                        <div class="task-container__task-list-icon" role="heading" aria-level="2">
                           <svg
                             viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg"
@@ -193,7 +193,7 @@
                               d="m25 30h-18a5.00588 5.00588 0 0 1 -5-5v-18a5.00588 5.00588 0 0 1 5-5h5a5 5 0 0 1 8 0h5a5.00588 5.00588 0 0 1 5 5v18a5.00588 5.00588 0 0 1 -5 5zm-18-26a3.00328 3.00328 0 0 0 -3 3v18a3.00328 3.00328 0 0 0 3 3h18a3.00328 3.00328 0 0 0 3-3v-18a3.00328 3.00328 0 0 0 -3-3h-6.1123l-.28809-.49951a3.0015 3.0015 0 0 0 -5.19873.00049l-.28906.49902zm17.41406 8-1.41406-1.41406-9.5 9.5-4.5-4.5-1.41406 1.41406 5.91406 5.91406zm-8.41406-6a1 1 0 1 0 -1-1 1 1 0 0 0 1 1z"
                             ></path>
                           </svg>
-                          <span class="_5vallt">Tasks</span>
+                          <span class="task-container__task-list-text">Tasks</span>
                         </div>
                         <span
                           ><button
@@ -202,8 +202,8 @@
                             aria-haspopup="true"
                             aria-busy="false"
                           >
-                            <span class="_1pzgepf"
-                              ><span class="_f3hihk">Show all</span
+                            <span class="main-content__task-show-wrapper"
+                              ><span class="main-content__task-show-text">Show all</span
                               ><svg
                                 viewBox="0 0 18 18"
                                 role="presentation"
@@ -223,22 +223,22 @@
                             </span></button
                         ></span>
                       </div>
-                      <ol class="_g0ajkh">
+                      <ol class="main-content__task-ol">
                         <li
-                          class="_1rn3mv3"
+                          class="main-content__task-li"
                           style="max-height: 250px; opacity: 1"
                         >
-                          <div class="_b8adsk">
-                            <div class="_1ct3lsx">
+                          <div class="main-content__task-list-wrapper">
+                            <div class="main-content__task-list-content">
                               <a
                                 href="/experience-hosting/listings/3745068/cancellation-policy"
-                                class="_1hmlc6dq"
+                                class="main-content__task-list-card"
                                 aria-busy="false"
-                                ><div class="_13dnq1">
+                                ><div class="main-content__task-card-title">
                                   Review your cancellation policy for Cooking
                                   Deep Fried Bright Orange Battered Eggs
                                 </div>
-                                <div class="_zye90a">
+                                <div class="main-content__task-card-desc">
                                   New cancellation policies are available for
                                   your Experience.
                                 </div></a
@@ -297,8 +297,8 @@
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
-                                                  <span class="_12eeuwg"
-                                                    ><div class="_ba3mo2p">
+                                                  <span class="main-content__header-ignore-wrapper"
+                                                    ><div class="main-content__header-ignore-text">
                                                       Ignore
                                                     </div></span
                                                   >
@@ -316,20 +316,20 @@
                           </div>
                         </li>
                         <li
-                          class="_1rn3mv3"
+                          class="main-content__task-li"
                           style="max-height: 250px; opacity: 1"
                         >
-                          <div class="_b8adsk">
-                            <div class="_1ct3lsx">
+                          <div class="main-content__task-list-wrapper">
+                            <div class="main-content__task-list-content">
                               <a
                                 href="/experience-hosting/calendar"
-                                class="_1hmlc6dq"
+                                class="main-content__task-list-card"
                                 aria-busy="false"
-                                ><div class="_13dnq1">
+                                ><div class="main-content__task-card-title">
                                   Add availability for Cooking Deep Fried Bright
                                   Orange Battered Eggs
                                 </div>
-                                <div class="_zye90a">
+                                <div class="main-content__task-card-desc">
                                   You’ve added 2 of 5 dates so far. Add 3 new
                                   dates so guests have more options on when they
                                   can take your experience.
@@ -389,8 +389,8 @@
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
-                                                  <span class="_12eeuwg"
-                                                    ><div class="_ba3mo2p">
+                                                  <span class="main-content__header-ignore-wrapper"
+                                                    ><div class="main-content__header-ignore-text">
                                                       Ignore
                                                     </div></span
                                                   >
@@ -408,19 +408,19 @@
                           </div>
                         </li>
                         <li
-                          class="_1rn3mv3"
+                          class="main-content__task-li"
                           style="max-height: 250px; opacity: 1"
                         >
-                          <div class="_b8adsk">
-                            <div class="_1ct3lsx">
+                          <div class="main-content__task-list-wrapper">
+                            <div class="main-content__task-list-content">
                               <a
                                 href="/experience-hosting/resource-center"
-                                class="_1hmlc6dq"
+                                class="main-content__task-list-card"
                                 aria-busy="false"
-                                ><div class="_13dnq1">
+                                ><div class="main-content__task-card-title">
                                   Check out Airbnb’s host resources
                                 </div>
-                                <div class="_zye90a">
+                                <div class="main-content__task-card-desc">
                                   There are articles, videos, guides, and more
                                   resources to help you get started.
                                 </div></a
@@ -479,8 +479,8 @@
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
-                                                  <span class="_12eeuwg"
-                                                    ><div class="_ba3mo2p">
+                                                  <span class="main-content__header-ignore-wrapper"
+                                                    ><div class="main-content__header-ignore-text">
                                                       Ignore
                                                     </div></span
                                                   >
@@ -494,7 +494,7 @@
                                                   aria-busy="false"
                                                 >
                                                   <span class="_185kh56"
-                                                    ><div class="_ba3mo2p">
+                                                    ><div class="main-content__header-ignore-text">
                                                       Mark as complete
                                                     </div></span
                                                   >
@@ -513,10 +513,10 @@
                         </li>
                       </ol>
                     </div>
-                    <div class="_1odk1ko" id="FMP-target">
-                      <div class="_dhbroc">
-                        <div class="_1bpze4e">
-                          <div class="_i3y2yi" role="heading" aria-level="2">
+                    <div class="upcoming-container" id="FMP-target">
+                      <div class="upcoming-container__details-wrapper">
+                        <div class="upcoming-container__icon-wrapper">
+                          <div class="task-container__task-list-icon" role="heading" aria-level="2">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
                               viewBox="0 0 32 32"
@@ -534,12 +534,12 @@
                                 d="M28,2H22V0H20V2H12V0H10V2H4A2.002,2.002,0,0,0,2,4V25a5.00588,5.00588,0,0,0,5,5H19.58594A2.0144,2.0144,0,0,0,21,29.41406L29.41406,21A2.0144,2.0144,0,0,0,30,19.58594V4A2.00229,2.00229,0,0,0,28,2ZM20,27.58594V23a3.00328,3.00328,0,0,1,3-3h4.58594ZM28,10H4v2H28v6H23a5.00588,5.00588,0,0,0-5,5v5H7a3.00328,3.00328,0,0,1-3-3L3.99854,4H10V6h2V4h8V6h2V4h6Z"
                               ></path>
                             </svg>
-                            <span class="_5vallt">Upcoming experiences</span>
+                            <span class="task-container__task-list-text">Upcoming experiences</span>
                           </div>
                           <div>
                             <button type="button" class="main-content__agenda-list-btn">
-                              <span class="_ucfrq6"
-                                ><span class="_f3hihk">Show all</span
+                              <span class="upcoming-container__show-all"
+                                ><span class="main-content__task-show-text">Show all</span
                                 ><svg
                                   viewBox="0 0 18 18"
                                   role="presentation"
@@ -565,9 +565,9 @@
                           type="button"
                           class="main-content__agenda-list-btn"
                         >
-                          <div class="_1m5qrpa">
-                            <div class="_dzx88q">
-                              <div class="_yczykv">
+                          <div class="main-content__agenda-list-wrapper">
+                            <div class="main-content__agenda-list-content">
+                              <div class="main-content__agenda-list-img">
                                 <div
                                   class="img-middle"
                                   role="img"
@@ -603,9 +603,9 @@
                                   ></div>
                                 </div>
                               </div>
-                              <div class="_mxzh0x">
-                                <div class="_n8o7l17">
-                                  <div class="_5dbyxj">
+                              <div class="main-content__agenda-details-wrapper">
+                                <div class="main-content__agenda-details">
+                                  <div class="main-content__agenda-time-detail">
                                     <span aria-hidden="true"
                                       >Today · 11:00pm – 11:30pm Philippines
                                       Time</span
@@ -614,20 +614,20 @@
                                       11:30 PM Philippines Time</span
                                     >
                                   </div>
-                                  <div class="_19kl9qj">
-                                    <div class="_1wlr21f">
+                                  <div class="main-content__agenda-todo-detail">
+                                    <div class="main-content__agenda-todo-desc">
                                       Cooking Deep Fried Bright Orange Battered
                                       Eggs
                                     </div>
-                                    <div class="_1wlr21f">
+                                    <div class="main-content__agenda-todo-desc">
                                       0 seats • Hosted by Jose Angelo • Private
                                       (hidden) • English
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_z49g23">
-                                  <div class="_5dbyxj"></div>
-                                  <div class="_jtlvkdr">No guests yet</div>
+                                <div class="main-content__agenda-status">
+                                  <div class="main-content__agenda-time-detail"></div>
+                                  <div class="main-content__agenda-status-detail">No guests yet</div>
                                 </div>
                               </div>
                             </div>
@@ -635,8 +635,8 @@
                         </button>
                       </div>
                       <button type="button" class="main-content__agenda-list-btn">
-                        <div class="_1p1ero8">
-                          <div class="_z6ased">
+                        <div class="main-content__add-agenda">
+                          <div class="main-content__add-agenda-icon">
                             <div>
                               <svg
                                 viewBox="0 0 48 48"
@@ -663,8 +663,8 @@
                                 </g>
                               </svg>
                             </div>
-                            <div class="_1epv99y">
-                              <div class="_8cgvjp">Add availability</div>
+                            <div class="main-content__add-agenda-body">
+                              <div class="main-content__add-agenda-title">Add availability</div>
                               You don’t have enough experiences scheduled to
                               show in most search results. If you add 5 or more
                               dates, more guests will see your experience.
@@ -696,12 +696,12 @@
                       </button>
                     </div>
                   </div>
-                  <div class="_1207vr9w">
-                    <span class="_fjfgbe" aria-hidden="true"></span>
-                    <div class="_1tntk0a">
-                      <div class="_1wgprat">
-                        <div class="_z4xg5i" role="heading" aria-level="2">
-                          <div class="_1ubhd29">
+                  <div class="main-content__news-container">
+                    <span class="main-content__news-container-divider" aria-hidden="true"></span>
+                    <div class="main-content__news-content">
+                      <div class="main-content__news-content-wrapper">
+                        <div class="main-content__news-header" role="heading" aria-level="2">
+                          <div class="main-content__news-header-icon">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
                               viewBox="0 0 32 32"
@@ -723,8 +723,8 @@
                           News
                         </div>
                         <div>
-                          <span class="_iqjtbx">1 / 4</span
-                          ><span class="_c0l5kf"
+                          <span class="main-content__news-header-count">1 / 4</span
+                          ><span class="main-content__news-header-pagination"
                             ><button
                               aria-label="back to the previous news"
                               type="button"
@@ -774,10 +774,10 @@
                           </button>
                         </div>
                       </div>
-                      <div class="_1gj01g">
+                      <div class="news-card">
                         <div>
                           <div>
-                            <div class="_1bi2pwy">
+                            <div class="news-card__img-wrapper">
                               <div
                                 class="img-middle"
                                 role="presentation"
@@ -812,11 +812,11 @@
                               </div>
                             </div>
                             <div>
-                              <div class="_1tfwnxl">
-                                <h3 class="_1q03f17">
+                              <div class="news-card__body">
+                                <h3 class="news-card__note">
                                   Highlight your Experience
                                 </h3>
-                                <h2 class="_qhg8fi">
+                                <h2 class="news-card__header">
                                   <span>Create a unique video</span>
                                 </h2>
                                 <div class="explore-filter">
@@ -828,7 +828,7 @@
                                   >
                                 </div>
                               </div>
-                              <div class="_ul9yoa0">
+                              <div class="news-card__action-wrapper">
                                 <a
                                   href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                   class="btn-dark--small"
