--- a/login-security.html
+++ b/login-security.html
@@ -551,7 +551,7 @@
                                                     class="app-theme__navbar-create-button"
                                                     aria-busy="false"
                                                   >
-                                                    <div class="_ba3mo2p">
+                                                    <div class="main-content__header-ignore-text">
                                                       Connect
                                                     </div>
                                                   </button></span
@@ -596,7 +596,7 @@
                                                     class="app-theme__navbar-create-button"
                                                     aria-busy="false"
                                                   >
-                                                    <div class="_ba3mo2p">
+                                                    <div class="main-content__header-ignore-text">
                                                       Connect
                                                     </div>
                                                   </button></span
@@ -680,7 +680,7 @@
                                                         class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
-                                                        <div class="_ba3mo2p">
+                                                        <div class="main-content__header-ignore-text">
                                                           Log out device
                                                         </div>
                                                       </button></span
@@ -743,7 +743,7 @@
                                                         class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
-                                                        <div class="_ba3mo2p">
+                                                        <div class="main-content__header-ignore-text">
                                                           Log out device
                                                         </div>
                                                       </button></span
@@ -806,7 +806,7 @@
                                                         class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
-                                                        <div class="_ba3mo2p">
+                                                        <div class="main-content__header-ignore-text">
                                                           Log out device
                                                         </div>
                                                       </button></span
@@ -871,7 +871,7 @@
                                                         class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
-                                                        <div class="_ba3mo2p">
+                                                        <div class="main-content__header-ignore-text">
                                                           Log out device
                                                         </div>
                                                       </button></span
@@ -937,7 +937,7 @@
                                                         class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
-                                                        <div class="_ba3mo2p">
+                                                        <div class="main-content__header-ignore-text">
                                                           Log out device
                                                         </div>
                                                       </button></span
@@ -1700,7 +1700,7 @@
                                                       class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
-                                                      <div class="_ba3mo2p">
+                                                      <div class="main-content__header-ignore-text">
                                                         Connect
                                                       </div>
                                                     </button></span
@@ -1745,7 +1745,7 @@
                                                       class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
-                                                      <div class="_ba3mo2p">
+                                                      <div class="main-content__header-ignore-text">
                                                         Connect
                                                       </div>
                                                     </button></span
@@ -1833,7 +1833,7 @@
                                                           class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
-                                                          <div class="_ba3mo2p">
+                                                          <div class="main-content__header-ignore-text">
                                                             Log out device
                                                           </div>
                                                         </button></span
@@ -1898,7 +1898,7 @@
                                                           class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
-                                                          <div class="_ba3mo2p">
+                                                          <div class="main-content__header-ignore-text">
                                                             Log out device
                                                           </div>
                                                         </button></span
@@ -1963,7 +1963,7 @@
                                                           class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
-                                                          <div class="_ba3mo2p">
+                                                          <div class="main-content__header-ignore-text">
                                                             Log out device
                                                           </div>
                                                         </button></span
@@ -2030,7 +2030,7 @@
                                                           class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
-                                                          <div class="_ba3mo2p">
+                                                          <div class="main-content__header-ignore-text">
                                                             Log out device
                                                           </div>
                                                         </button></span
@@ -2098,7 +2098,7 @@
                                                           class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
-                                                          <div class="_ba3mo2p">
+                                                          <div class="main-content__header-ignore-text">
                                                             Log out device
                                                           </div>
                                                         </button></span
