--- a/payment.html
+++ b/payment.html
@@ -271,7 +271,7 @@
                                             >
                                               <section>
                                                 <div
-                                                  class="tu9uqg8 dir dir-ltr"
+                                                  class="contact-host__textarea-question dir dir-ltr"
                                                 >
                                                   <h2
                                                     tabindex="-1"
@@ -395,7 +395,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -414,7 +414,7 @@
                                               >
                                                 <section>
                                                   <div
-                                                    class="tu9uqg8 dir dir-ltr"
+                                                    class="contact-host__textarea-question dir dir-ltr"
                                                   >
                                                     <h2
                                                       tabindex="-1"
@@ -530,7 +530,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -839,7 +839,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -897,7 +897,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -1199,7 +1199,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -1240,7 +1240,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -1259,7 +1259,7 @@
                                               >
                                                 <section>
                                                   <div
-                                                    class="tu9uqg8 dir dir-ltr"
+                                                    class="contact-host__textarea-question dir dir-ltr"
                                                   >
                                                     <h2
                                                       tabindex="-1"
