--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -241,7 +241,7 @@
                                           >
                                             <section>
                                               <div
-                                                class="tu9uqg8 liv58fw dir dir-ltr"
+                                                class="contact-host__textarea-question liv58fw dir dir-ltr"
                                               >
                                                 <h2
                                                   tabindex="-1"
@@ -733,7 +733,7 @@
                                             >
                                               <section>
                                                 <div
-                                                  class="tu9uqg8 liv58fw dir dir-ltr"
+                                                  class="contact-host__textarea-question liv58fw dir dir-ltr"
                                                 >
                                                   <h2
                                                     tabindex="-1"
