--- a/products.html
+++ b/products.html
@@ -1552,7 +1552,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -1768,7 +1768,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -1897,7 +1897,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -1966,7 +1966,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -2143,7 +2143,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -2628,7 +2628,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -2839,7 +2839,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -3018,7 +3018,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -5567,7 +5567,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -6305,7 +6305,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -6744,7 +6744,7 @@
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
-                                              class="_npr0qi"
+                                              class="contact-host__border-top-color"
                                               style="
                                                 border-top-color: rgb(
                                                   221,
@@ -9635,7 +9635,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi info-card-border-top"
+                                                class="contact-host__border-top-color info-card-border-top"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -9759,7 +9759,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -9822,7 +9822,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -10005,7 +10005,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -10243,7 +10243,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -10596,7 +10596,7 @@
                                               "
                                             >
                                               <div
-                                                class="_npr0qi"
+                                                class="contact-host__border-top-color"
                                                 style="
                                                   border-top-color: rgb(
                                                     221,
@@ -18344,7 +18344,7 @@
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
-                                            class="_npr0qi"
+                                            class="contact-host__border-top-color"
                                             style="
                                               border-top-color: rgb(
                                                 221,
@@ -19665,7 +19665,7 @@
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
-                                            class="_npr0qi"
+                                            class="contact-host__border-top-color"
                                             style="
                                               border-top-color: rgb(
                                                 221,
@@ -19807,7 +19807,7 @@
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
-                                            class="_npr0qi"
+                                            class="contact-host__border-top-color"
                                             style="
                                               border-top-color: rgb(
                                                 221,
@@ -20246,7 +20246,7 @@
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
-                                            class="_npr0qi"
+                                            class="contact-host__border-top-color"
                                             style="
                                               border-top-color: rgb(
                                                 221,
