--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -283,7 +283,7 @@
                                         ><a
                                           href="/users/settings"
                                           class="explore-click"
-                                          ><div class="_ba3mo2p">Manage</div></a
+                                          ><div class="main-content__header-ignore-text">Manage</div></a
                                         ></span
                                       >
                                     </div>
@@ -681,7 +681,7 @@
                                             ><a
                                               href="/users/settings"
                                               class="explore-click"
-                                              ><div class="_ba3mo2p">
+                                              ><div class="main-content__header-ignore-text">
                                                 Manage
                                               </div></a
                                             ></span
