--- a/profile.html
+++ b/profile.html
@@ -845,7 +845,7 @@
                                             <label for="about"
                                               ><div class="_1wgf3yo">About</div>
                                               <div class="_4l12l8">
-                                                <div class="_1aoj0ap">
+                                                <div class="contact-host__textarea-wrapper">
                                                   <div dir="ltr">
                                                     <textarea
                                                       name="about"
@@ -1938,7 +1938,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <label for="about"
                                         ><div class="_1wgf3yo">About</div>
                                         <div class="_4l12l8">
-                                          <div class="_1aoj0ap">
+                                          <div class="contact-host__textarea-wrapper">
                                             <div dir="ltr">
                                               <textarea
                                                 name="about"
