--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -322,7 +322,7 @@
                           >
                         </div>
                         <div class="_4l12l8">
-                          <div class="_1aoj0ap">
+                          <div class="contact-host__textarea-wrapper">
                             <div dir="ltr">
                               <textarea
                                 rows="6"
