--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1068,7 +1068,7 @@
                               </section>
                             </div>
                             <div style="margin-top: 24px; margin-bottom: 24px">
-                              <div class="_ba3mo2p">
+                              <div class="main-content__header-ignore-text">
                                 What time would you typically start your
                                 experience?
                               </div>
