--- a/submission/review.html
+++ b/submission/review.html
@@ -1067,7 +1067,7 @@
                               </div>
                             </div>
                             <div>
-                              <div class="_1rn3mv3">
+                              <div class="main-content__task-li">
                                 <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 32 32"
@@ -1139,7 +1139,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="_1rn3mv3">
+                              <div class="main-content__task-li">
                                 <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 16 16"
@@ -1211,7 +1211,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="_1rn3mv3">
+                              <div class="main-content__task-li">
                                 <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 32 32"
