--- a/trips.html
+++ b/trips.html
@@ -685,7 +685,7 @@
                                 style="--maxWidth: 1120px"
                               >
                                 <div
-                                  class="_npr0qi"
+                                  class="contact-host__border-top-color"
                                   style="border-top-color: rgb(221, 221, 221)"
                                 ></div>
                                 <div
