--- a/wishlist.html
+++ b/wishlist.html
@@ -279,7 +279,7 @@
                                           </svg>
                                         </span>
                                       </button>
-                                      <span class="_c0l5kf">
+                                      <span class="main-content__news-header-pagination">
                                       </span>
                                       <button aria-label="Settings" data-testid="list-details-marquee__button-to-open-settings" type="button" class="btn-save">
                                         <span class="relative">
@@ -1793,7 +1793,7 @@
                                             ></path>
                                           </g></svg
                                       ></span></button
-                                    ><span class="_c0l5kf"></span
+                                    ><span class="main-content__news-header-pagination"></span
                                     ><button
                                       aria-label="Settings"
                                       data-testid="list-details-marquee__button-to-open-settings"
