--- a/edit/what.html
+++ b/edit/what.html
@@ -416,7 +416,7 @@
                                           </li>
                                         </ul>
                                         <div class="_4l12l8">
-                                          <div class="_1aoj0ap">
+                                          <div class="contact-host__textarea-wrapper">
                                             <div dir="ltr">
                                               <textarea
                                                 maxlength="1400"
@@ -810,7 +810,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                   <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
-                                        class="_npr0qi"
+                                        class="contact-host__border-top-color"
                                         style="
                                           border-top-color: rgb(221, 221, 221);
                                         "
