--- a/reviews.html
+++ b/reviews.html
@@ -1289,7 +1289,7 @@
                                     Write a public review for future guests
                                   </div>
                                   <div class="_4l12l8">
-                                    <div class="_1aoj0ap">
+                                    <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
                                           aria-label="Write a public review for future guests"
@@ -1310,7 +1310,7 @@
                                     Write a private note to Jose Angelo
                                   </div>
                                   <div class="_4l12l8">
-                                    <div class="_1aoj0ap">
+                                    <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
                                           aria-label="Start writing here…"
