--- a/submission/about.html
+++ b/submission/about.html
@@ -1209,7 +1209,7 @@
                                 </div>
                               </div>
                               <div class="_4l12l8">
-                                <div class="_1aoj0ap">
+                                <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
                                       rows="5"
