--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1499,7 +1499,7 @@
                                     </div>
                                   </div>
                                   <div class="_4l12l8">
-                                    <div class="_1aoj0ap">
+                                    <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
                                           name="trip_template_traveler_requirements"
