--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1076,7 +1076,7 @@
                                 </li>
                               </ul>
                               <div class="_4l12l8">
-                                <div class="_1aoj0ap">
+                                <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
                                       maxlength="1400"
